src/test/deca/syntax/valid/hello/Print.deca
// Test avec un print avec argument

{
        print("Hello");
}

