src/test/deca/syntax/invalid/sansobjet/PrintPrint.deca
// mismatched input 'print' expecting
// Description : Test with a print inside a print : impossible.
// Result : error : mismatched input 'print' expecting
{
	print(print("Hello"));
}